# fireOS

./: #Makefile#  #test.dsk#  .gitignore  CMakeLists.txt  Makefile  Makefile~  README.md  asmintr.c  asmintr.h  boot.nasm  boot.s  boot.s~  config.h  disk.c  disk.h  elf.c  elf.h  fat.c  fat.h  fireos.sym  gdt_c.c  gdt_s.s  idt.h  idt_c.c  idt_s.nasm  idt_s.s  inthandle.c  inthandle.h  irq.c  irq.h  kernel.c  keyboard.c  keyboard.h  malloc.c  malloc.h  mkver  mount_disk.sh  mt.c  mt.h  paging.c  (+26 more)
libc/: Makefile
libc/include/: locale.h  math.h  signal.h  stdarg.h  stdio.h  stdlib.h  syscall.h  time.h  unistd.h
libc/include/sys/: types.h  wait.h
libc/src/: crt0.nasm  crt0.s  stdio.c  stdlib.c  syscall.s  wait.c
modules/: Makefile  echo.c  hello  hello.c  hello.mod  hello.s  hello_c  hello_c.c  init.c  linker.ld
src/: CMakeLists.txt  asmintr.h  config.h  disk.c  elf.h  fat.c  gdt.h  gdt_c.c  idt.h  irq.h  keyboard.c  paging.h  paging_c.c  printf.c  printf.h  process.c  stdlib.c  syscall.h  syscall_handlers.c  timer.h  vga.h
src/libc/include/: limits.h  signal.h  stddef.h
src/libc/src/: stdio.c  string.c  unistd.c
src/modules/: hello_c.c
tests/: CMakeLists.txt
